# juce-webgpu-example

./: CMakeLists.txt  OpenGL-Integration.md  README.md
.github/: copilot-instructions.md
example/: MainComponent.cpp  MainComponent.h  OpenGLWebGPUComponent.cpp  OpenGLWebGPUComponent.h  WebGPUGraphics.cpp  WebGPUGraphics.h  main.cpp
include/: WebGPUExampleScene.h  WebGPUJuceUtils.h  WebGPUUtils.h
shaders/: comp.wgsl
src/: ExampleScene.cpp  ExampleScene.h  MainComponent.cpp  MainComponent.h  WebGPUCompute.cpp  WebGPUCompute.h  WebGPUExampleScene.cpp  WebGPUGraphics.cpp  WebGPUGraphics.h  WebGPUImpl.cpp  WebGPUJuceUtils.cpp  WebGPUUtils.cpp  main.cpp
